@@ -1,3 +1,7 @@
+2004-04-17 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b40
+
+	* New: Possibility to show Owner in different ways. RFE #936003 .
+
 2004-04-16 Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b39
 
 	* Bugfix: added dirname(__FILE__) and $gallery->app->photoAlbumURL
